data/derived/comb/progs/unify/prog8685.ml.out
Characters 29-47:
  let fixpoint (f,b) = wwhile ((fixpointHelper f),b);;
                               ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
